--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <form action="" class="modal__form">
 
                         <span class="subtitle__list">Как часто вы заходите на сайт</span>
-                        <label class="label__modal-list" for="">
+                        <label for="">
                             <select class="list__modal" name="days" id="">
                                 <option value="t1">
                                     Почти каждый день
@@ -62,41 +62,12 @@
                                 <option selected value="t2">Крыса Лариса</option>
                             </select>
 
-
+                            
                         </label>
                         <span class="checkbox__sutitle">
                             Вы подписались на email рассылку ?
                         </span>
-                        <div class="checkbox">
-                            <div class="radio-group">
-                                <input class="radio" name="radio-group" type="radio">
-                                <span class="radio-group-text">Да</span>
-                            </div>
-                            <div class="radio-group  second__radio-group">
-                                <input class="radio" name="radio-group" type="radio">
-                                <span class="radio-group-text">Нет</span>
-                            </div>
-
-
-                        </div>
-
-                            
-
-                        <label for="" class="label__form">
-                            <span class="subtitle__form">
-                                Раскажите какой бы вы контент хотели видеть?
-                            </span>
-
-                            <textarea class="field" placeholder="Может ещё больше рецепетов" t></textarea>
-
-                            <button class="button__form" type="button">
-                                Отправить
-
-                            </button>
-
-
-                        </label>
-
+                        <input type="checkbox" name="chek">
                     </form>
 
                 </div>
@@ -366,7 +337,7 @@
                         </div>
                     </div>
 
-                    <div class="section-travel-healt">
+                    <!-- <div class="section-travel-healt">
 
                         <div class="pic__travel">
                             <img src="./img/last-post6.jpg" alt="" class="pictures__travel">
@@ -399,10 +370,10 @@
                             </p>
 
                         </div>
-                    </div>
+                    </div> -->
 
 
-                    <div class="section-travel-healt">
+                     <div class="section-travel-healt " style="display: none;"> 
 
                         <div class="pic__travel">
                             <img src="./img/last-post4.jpg" alt="" class="pictures__travel">
@@ -437,7 +408,7 @@
 
                         </div>
                     </div>
-                </div>
+                </div> 
 
 
 
@@ -537,13 +508,13 @@
 
                     <div class="block__form">
                         <form action="" class="form">
-                            <label for="" class="label__aside">
+                            <label for="" class="label">
                                 <input type="text" class="input" placeholder="Найти...">
 
 
 
 
-                                <button class="button__aside" type="submit">
+                                <button class="button" type="submit">
                                     <span class="span-button-text">
                                         текст
                                     </span>
